change overflow rules to allow scrolling/prevent content breakout

--- a/styles/_app-box.scss
+++ b/styles/_app-box.scss
@@ -23,6 +23,7 @@
   flex-direction: column;
   width: 57%;
   background: $gray;
+  overflow: scroll;
 
   &__search {
     display: flex;
@@ -31,6 +32,7 @@
 
   &__top {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
 
@@ -41,7 +43,7 @@
 
     &--right {
       display: flex;
-      align-items: center;
+      flex-direction: row;
       justify-content: center;
     }
   }
@@ -54,8 +56,9 @@
 }
 
 .image-box {
-  width: 70%;
-  min-width: 15rem;
+  width: 90%;
+  min-width: 10rem;
+  max-width: 25rem;
 
   &__img {
     width: 100%;
@@ -68,6 +71,7 @@
 
   &__bar {
     flex-grow: 1;
+    min-width: 5rem;
     padding: 0.25 * $gutter;
     border: 0;
     font-size: 1.2rem;
