--- a/styles/_box-sizing.scss
+++ b/styles/_box-sizing.scss
@@ -1,6 +1,5 @@
 // apply a natural box layout model to all elements, but allowing components to change
 html {
-  overflow: hidden;
   box-sizing: border-box;
 }
 
@@ -17,7 +16,6 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background: $black;
 }
